...

            <!-- Event Name -->



            <ImageButton
                android:id="@+id/img_event_poster"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image"
                app:layout_constraintBottom_toTopOf="@+id/info_container"
                app:layout_constraintStart_toStartOf="parent"
...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Name *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_name" />

            <EditText
                android:id="@+id/et_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/purpleText"
...
            <TextView
                android:layout_width="379dp"
                android:layout_height="wrap_content"
                android:text="Event Description *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/et_event_description" />



            <EditText
                android:id="@+id/et_event_description"
                android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Event Tags (comma separate) *:"
                android:textColor="@color/purpleText"
                android:textStyle="bold"
                android:gravity="top"
                app:layout_constraintBottom_toTopOf="@+id/et_event_tag" />



            <EditText
                android:id="@+id/et_event_tag"
                android:layout_width="match_parent"
...
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/event_start_date_container">

                    <EditText
                        android:id="@+id/et_event_StartDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="Start Date"
...
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/event_end_date_container">

                    <EditText
                        android:id="@+id/et_event_EndDate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:focusable="false"
                        android:hint="End Date"
...
                    android:paddingHorizontal="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/event_start_time_container">

                    <EditText
                        android:id="@+id/et_StartTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="Start Time"
...
                    android:paddingHorizontal="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:id="@+id/event_end_time_container">

                    <EditText
                        android:id="@+id/et_EndTime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:focusable="true"
                        android:hint="End Time"
...

                <Space
                    android:layout_width="12dp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/btn_create_event"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Create"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/darkPurple" />
...
