...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Event Name -->
    <TextView
        android:id="@+id/tv_event_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Event Name"
        android:textColor="@color/purpleText"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <!-- QR Code Image -->
    <ImageView
        android:id="@+id/iv_qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:contentDescription="QR Code"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
...
