...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="16dp">

                <Button
                    android:id="@+id/btn_qr_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="View QR Code"
                    android:backgroundTint="@color/purpleText"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp" />
...
